<?xml version="1.0"?>
<package format="2">
  <name>vs_qual_trial</name>
  <version>0.1.0</version>
  <description>First try at ARIAC</description>
  <maintainer email="virajmalia2@gmail.com">Viraj Malia</maintainer>
  <maintainer email="Shashankthakker16@gmail.com">Shashank Thakker</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>osrf_gear</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

</package>
